add separate branch

--- a/sujan.ipynb
+++ b/sujan.ipynb
@@ -7,8 +7,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#import all necessary functions for working with ncdata\n",
     "import xarray as xr\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n"
    ]
   },
   {
@@ -1077,7 +1079,9 @@
      ]
     }
    ],
-   "source": []
+   "source": [
+    "## writing functions \n"
+   ]
   }
  ],
  "metadata": {
