--- a/Heather's Tasks/cluster_plot.ipynb
+++ b/Heather's Tasks/cluster_plot.ipynb
@@ -648,9 +648,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:meds-py]",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-env-meds-py-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -662,7 +662,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
