--- a/Script/Processing_Scripts/weighing_functs.ipynb
+++ b/Script/Processing_Scripts/weighing_functs.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "30a352a3-604b-4d03-a683-78bb73fea066",
    "metadata": {},
    "outputs": [],
@@ -117,6 +117,46 @@
    "metadata": {},
    "source": [
     "#### Building up function to include variable(s) selection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a53416f3-ab2d-4134-849a-3a69effea5e7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
+    "# ----  weigh dummy landarea by gridcell  ----\n",
+    "#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
+    "#------Weight Gridcells by Landarea---\n",
+    "def weight_landarea_gridcells(da,landarea):\n",
+    "\n",
+    "    # the desired variable may be subset from this data array. In this case we're using LNC for linearity\n",
+    "    da = ds['LNC']\n",
+    "\n",
+    "    # weigh landarea variable by mean of gridcell dimension\n",
+    "    weighted_avg_area = da.weighted(landarea).mean(dim = 'gridcell')\n",
+    "\n",
+    "    return weighted_avg_area\n",
+    "\n",
+    "\n",
+    "#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
+    "# ----     weigh dummy data time dim      ----\n",
+    "#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
+    "#------Weighted Averages by Time---\n",
+    "def yearly_weighted_average(da):\n",
+    "    # Get the array of number of days from the main dataset\n",
+    "    days_in_month = da['time.daysinmonth']\n",
+    "\n",
+    "    # Multiply each month's data by corresponding days in month\n",
+    "    weighted_sum = (days_in_month*da).groupby(\"time.year\").sum(dim = 'time')\n",
+    "\n",
+    "    # Total days in the year\n",
+    "    total_days = days_in_month.groupby(\"time.year\").sum(dim = 'time')\n",
+    "\n",
+    "    # Calculate weighted average for the year\n",
+    "    return weighted_sum / total_days"
    ]
   },
   {
