lin reg notebook created. was able to read in the clusters with a mixture of mine & sujan's code. I was able to apply the fix_time func to the ensemble, but not the functions we created. This is something we should def revisit & improve. Next step for this notebook is to get the regression working for the cluster & plot it.

--- a/Script/Processing_Scripts/cluster_plot.ipynb
+++ b/Script/Processing_Scripts/cluster_plot.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Function for Cluster Plot w/ Basic Linear Regression\n",
     "## Example Parameter: Avg Leaf Nitrogen Concentration (LNC) vs Leaf Carbon Nitrogen Ratio (LCN)\n",
-    "#### Author: Heather Childers & Sofia Ingersoll \n",
+    "#### Author: Heather Childers, Sofia Ingersoll, Sujan Bhattaria \n",
     "##### Date: 2024-02-18"
    ]
   },
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "c1a61a79-78c5-448b-a032-02de33e4b496",
    "metadata": {},
    "outputs": [],
@@ -34,10 +34,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "458e6ac2-52a7-4d5e-b341-96f1d9b8d6a7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'utils'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[4], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# import libraries & data pre-processing functions from utils.py\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mutils\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;241m*\u001b[39m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'utils'"
+     ]
+    }
+   ],
    "source": [
     "# import libraries & data pre-processing functions from utils.py\n",
     "from utils import *"
@@ -1443,14 +1455,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "628332a6-7ba2-4b80-a808-b88de5d4c082",
-   "metadata": {},
-   "source": [
-    "**NOTE:The current set up for loading in the data cluster gives a warning about the size being so large it will slow down. A message at the bottom of my browser says \"Initialized (additional servers needed) Mem: 2.67/10 GB\". I think I will increase my core processing request to 15 and see if that improves the computing issue.**"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 53,
    "id": "ba3064fa-5113-4142-abdf-f55dcda4da71",
@@ -1514,7 +1518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "c65a7a73-303a-4a94-8484-08c3627d9137",
    "metadata": {},
    "outputs": [
@@ -1525,7 +1529,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[11], line 6\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;66;03m# ----    Wrangle  Cluster Data     ----\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;66;03m#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m# Subset for the variable of interest LNC and properly weigh grid cells and time dim\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;66;03m# these functions are defined in the utils library \u001b[39;00m\n\u001b[0;32m----> 6\u001b[0m cluster_ds \u001b[38;5;241m=\u001b[39m \u001b[43mcluster_ds\u001b[49m[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mLNC\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mweighted_landarea_gridcells(landarea)\u001b[38;5;241m.\u001b[39myearly_weighted_average()\u001b[38;5;241m.\u001b[39mfix_time()\n",
+      "Cell \u001b[0;32mIn[2], line 6\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;66;03m# ----    Wrangle  Cluster Data     ----\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;66;03m#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m# Subset for the variable of interest LNC and properly weigh grid cells and time dim\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;66;03m# these functions are defined in the utils library \u001b[39;00m\n\u001b[0;32m----> 6\u001b[0m cluster_ds \u001b[38;5;241m=\u001b[39m \u001b[43mcluster_ds\u001b[49m[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mLNC\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mweighted_landarea_gridcells(landarea)\u001b[38;5;241m.\u001b[39myearly_weighted_average()\u001b[38;5;241m.\u001b[39mfix_time()\n",
       "\u001b[0;31mNameError\u001b[0m: name 'cluster_ds' is not defined"
      ]
     }
