updating utils to contain cluster read in function & updated name to  ml_utils in  ml folder

--- a/Script/Processing_Scripts/cluster_plot.ipynb
+++ b/Script/Processing_Scripts/cluster_plot.ipynb
@@ -224,7 +224,7 @@
     "    xr.open_mfdataset( cluster_list, \n",
     "                                   combine='nested',\n",
     "                                   preprocess = lambda ds: preprocess(ds, var),\n",
-    "                                   parallel=False, \n",
+    "                                   parallel= True, \n",
     "                                   concat_dim=\"ens\")\n",
     "\n"
    ]
@@ -939,9 +939,7 @@
     }
    ],
    "source": [
-    "#Heather Update (2/28) @4:30pm. This should be working now.\n",
-    "\n",
-    "#modify the function if you want to pass the parameter\n",
+    "# modify the function if you want to pass the parameter\n",
     "def read_all_simulations(var):\n",
     "    '''prepare cluster list and read to create ensemble(group of data)\n",
     "    use preprocess to select only certain dimension and a variable'''\n",
