--- a/singersoll_ipynb/scratch_work.ipynb
+++ b/singersoll_ipynb/scratch_work.ipynb
@@ -380,6 +380,53 @@
     "plt.title('Default Simulation: OAAT0000')\n",
     "plt.colorbar(label = 'Average TSA: 2m air temperature (K)')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "59f08e11-f28d-4c22-9365-be4ace937c6d",
+   "metadata": {},
+   "source": [
+    "## Reading cluster data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "02db23f2-0fcc-4ff8-b87f-dbf6d7f55bf2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# read all simulations as a list\n",
+    "cluster_list = sorted(glob.glob('/glade/campaign/cgd/tss/projects/PPE/PPEn11_LHC/transient/hist/PPEn11_transient_LHC[0][0-5][0-9][0-9].clm2.h0.2005-02-01-00000.nc'))\n",
+    "cluster_list = cluster_list[1:len(cluster_list)]\n",
+    "#cluster_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fac36f0a-276b-4000-a31e-63f039f3ca70",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# creating cluster\n",
+    "#read the list and load it for the notebook\n",
+    "LNC = xr.open_mfdataset(cluster_list, \n",
+    "                                   combine='nested',\n",
+    "                                   parallel=True, \n",
+    "                                   concat_dim=\"ens\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "453bacaa-d6ef-4053-aca0-f5ea260b505c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# confirming that the ensemble dataset loaded correctly! yay! ens: 500 \n",
+    "LNC"
+   ]
   }
  ],
  "metadata": {
