--- a/Script/ML/gaussian/gauss_reg.ipynb
+++ b/Script/ML/gaussian/gauss_reg.ipynb
@@ -102,8 +102,7 @@
     "latin_hypercube = xr.open_dataset(file)\n",
     "\n",
     "#bring in single data \n",
-    "#subset only the TSA, and LeafCN from the dataset\n",
-    "\n",
+    "#subset only the leafn, and LeafCN from the dataset\n",
     "subset_latin_hypercube = latin_hypercube[[\"LEAFN\", \"LEAFCN\"]]\n"
    ]
   },
@@ -114,10 +113,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#create an array for both TSA and Leafcn\n",
-    "tsa = subset_latin_hypercube[\"LEAFN\"].values\n",
-    "leafcn = subset_latin_hypercube[\"LEAFCN\"].values\n",
-    "\n",
+    "#create an array for both leafn and Leafcn\n",
     "leafn = subset_latin_hypercube[\"LEAFN\"].values\n",
     "leafcn = subset_latin_hypercube[\"LEAFCN\"].values\n"
    ]
@@ -176,7 +172,7 @@
    "source": [
     "from sklearn.impute import KNNImputer\n",
     "\n",
-    "# Create a KNN imputer with k=4 (number of neighbors), not required for TSA as it no na values\n",
+    "# Create a KNN imputer with k=4 (number of neighbors), not required for as it no na values\n",
     "knn_imputer = KNNImputer(n_neighbors=4)\n",
     "leafcn= knn_imputer.fit_transform(np.array(leafcn).reshape(-1,1))\n"
    ]
@@ -200,12 +196,12 @@
    "source": [
     "import numpy as np\n",
     "\n",
-    "# Assuming tsa and leafcn have the same length\n",
+    "# Assuming leafn and leafcn have the same length\n",
     "num_samples = len(leafn)\n",
     "indices = np.arange(num_samples)\n",
     "np.random.shuffle(indices)\n",
     "\n",
-    "# Shuffle tsa and leafcn using the shuffled indices\n",
+    "# Shuffle leafn and leafcn using the shuffled indices\n",
     "shuffled_leafn = leafn[indices]\n",
     "shuffled_leafcn = leafcn[indices]\n"
    ]
@@ -247,7 +243,6 @@
     "\n",
     "#---------use standard scaler to transform the dataset\n",
     "from sklearn.preprocessing import StandardScaler\n",
-    "# Assuming tsa and leafcn are one-dimensional lists\n",
     "\n",
     "# Create StandardScaler objects\n",
     "train_x_scale= StandardScaler()\n",
