corrected utils in ml and processing scripts folders. added plotting and subsetting function to these utils scripts. working on creating a gpr function that makes sense. the current bounds are outside what we expect them to be when subsetting, so there's likely a bug here

--- a/singersoll_ipynb/scratch_work.ipynb
+++ b/singersoll_ipynb/scratch_work.ipynb
@@ -427,6 +427,205 @@
     "# confirming that the ensemble dataset loaded correctly! yay! ens: 500 \n",
     "LNC"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5b39f0b4-9f41-446e-b77a-5cd781295051",
+   "metadata": {},
+   "source": [
+    "## Linear Regression"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f75ebaf0-0289-4bf9-b6e8-cb53fbaaca97",
+   "metadata": {},
+   "source": [
+    "#### Combining da into ds for linear reg\n",
+    "This produces three dimensions: variable, lat, long. lin. reg only works for 2D or less."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "97f389c3-7aa2-4358-82b7-b57000a6fb60",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Combining into a Dataset\n",
+    "test = xr.Dataset({\"LEAFCN\": LEAFCN_da, \"LNC\": LNC_da})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "83b3bee2-06b0-4d59-b1bb-4b13380c06f4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Assuming leafcn_da and LNC_da are your pre-processed data arrays\n",
+    "# Make sure that leafcn_da and LNC_da have the same length and are 1D arrays\n",
+    "#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
+    "# ----      Split Data 90/10        ----\n",
+    "#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
+    "x_train, X_test, y_train, y_test = train_test_split(test['LEAFCN'], test['LNC'], test_size=0.1, random_state=0)\n",
+    "\n",
+    "#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
+    "# ----      Linear Regression       ----\n",
+    "#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
+    "regressor = LinearRegression()\n",
+    "regressor.fit(x_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5c219eb4-93f3-46fa-857c-9dcf286fe7a3",
+   "metadata": {},
+   "source": [
+    "#### Dropping NA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "18e5a573-951c-47b0-8a30-cfeec2eceb60",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
+    "# ----     Subsetting Dummy Data    ----\n",
+    "#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
+    "# only the da was pre_processed, so we're weighing the ds here and making an array\n",
+    "leafcn_da = ds['LEAFCN'].dropna('gridcell')\n",
+    "\n",
+    "leafcn_da\n",
+    "\n",
+    "# only the da was pre_processed, so we're weighing the ds here and making an array\n",
+    "leafcn_da = yearly_weighted_average(leafcn_da)\n",
+    "#.fix_time()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "64abc345-de7c-4279-93e6-dad4074fef80",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "#from sklearn_xarray import Stacker, Select\n",
+    "\n",
+    "\n",
+    "#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
+    "# ----      Split Data 90/10        ----\n",
+    "#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
+    "da = da.dropna('gridcell')\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(leafcn_da, da, test_size = 0.1, random_state=0)\n",
+    "\n",
+    "\n",
+    "#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
+    "# ----      Linear Regression       ----\n",
+    "#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
+    "regressor = LinearRegression()\n",
+    "regressor.fit(X_train, y_train)\n",
+    "\n",
+    "LinearRegression()\n",
+    "\n",
+    "y_pred = regressor.predict(X_test)\n",
+    "\n",
+    "#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
+    "# ----    Plot Linear Regression    ----\n",
+    "#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
+    "plt.scatter(X_train, y_train,color='g')\n",
+    "plt.plot(X_test, y_pred,color='k')\n",
+    "\n",
+    "plt.show()\n",
+    "plot.show() "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "04b20f8a-c60a-462c-921e-df97a078845b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# calculate global mean over time\n",
+    "LNC_avg = da.mean(dim = 'time')\n",
+    "\n",
+    "# plot mean tsa overtime of weighted gridcells\n",
+    "plt.figure(figsize = (9,4))\n",
+    "plt.scatter(leafcn_da,\n",
+    "            LNC_avg,\n",
+    "            c = LNC_avg,\n",
+    "           cmap = 'RdPu',\n",
+    "           alpha = 0.5)\n",
+    "plt.xlabel('Leaf Carbon Nitrogen Ratio')\n",
+    "plt.ylabel('Leaf Nitrogen Concentration')\n",
+    "plt.title('Default Simulation: OAAT0000')\n",
+    "plt.colorbar(label = 'Concenctration (units to be added)')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a9ae023b-ccfc-421d-9f25-c4d8282e8f38",
+   "metadata": {},
+   "source": [
+    "## Imputer NaN filler for Linear Regression\n",
+    "Linear Regression only works when both of the data arrays being passed do not contain NaN values. This might also be the issue preventing us from plotting above. I am going to try using the `SimpleImputer()` function to replace missing values with the mean values of this column. A variety of stats options may be selected to fill this instead. I've choosen mean for now. This still didn't work"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "65851c19-9d09-4cf3-a2ed-53941f601131",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Assuming leafcn_da and LNC_da are your pre-processed data arrays\n",
+    "# Make sure that leafcn_da and LNC_da have the same length and are 1D arrays\n",
+    "#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
+    "# ----      Split Data 90/10        ----\n",
+    "#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
+    "X_train, X_test, y_train, y_test = train_test_split(leafcn_da, LNC_da, test_size=0.1, random_state=0)\n",
+    "\n",
+    "#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
+    "# ----         Removing NaN         ----\n",
+    "#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
+    "# Handle NaN values using SimpleImputer\n",
+    "imputer = SimpleImputer(strategy='mean')  # You can choose other strategies like 'median' or 'most_frequent'\n",
+    "X_train_imputed = imputer.fit_transform(X_train)\n",
+    "X_test_imputer = imputer.fit_transform(X_test)\n",
+    "\n",
+    "y_train_imputed = imputer.fit_transform(y_train)\n",
+    "y_test_imputed = imputer.fit_transform(y_test)\n",
+    "\n",
+    "#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
+    "# ----      Linear Regression       ----\n",
+    "#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
+    "regressor = LinearRegression()\n",
+    "regressor.fit(X_train_imputed, y_train_imputed)\n",
+    "\n",
+    "#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
+    "# ----       Make Predictions       ----\n",
+    "#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
+    "y_pred = regressor.predict(X_test_imputed)\n",
+    "\n",
+    "#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
+    "# ----    Plot Linear Regression    ----\n",
+    "#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
+    "plt.scatter(X_train_imputed, y_train_imputed, color='g', label='Training Data')\n",
+    "plt.scatter(X_test_imputed, y_test_imputed, color='b', label='Testing Data')\n",
+    "plt.plot(X_test_imputed, y_pred, color='k', linewidth=2, label='Linear Regression')\n",
+    "\n",
+    "plt.xlabel('leafcn')\n",
+    "plt.ylabel('LNC_da')\n",
+    "plt.title('Linear Regression for LNC')\n",
+    "plt.legend()\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
