--- a/Dashboard/dashboard.ipynb
+++ b/Dashboard/dashboard.ipynb
@@ -661,7 +661,39 @@
    "id": "bdd2d06a-ca2d-451e-931e-a82121a43703",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def subset_and_plot_cluster(param, var):\n",
+    "    '''describe the relationship between the selected variable \n",
+    "    and parameter(s) between 2005-2010. output a\n",
+    "    cluster plot averaged by year.'''\n",
+    "\n",
+    "    # Read in and wrangle user selected parameter cluster\n",
+    "    param_avg  = params[param]\n",
+    "\n",
+    "    \n",
+    "    # Read in and wrangle user selected variable cluster\n",
+    "    da_v = read_all_simulations(var)\n",
+    "    # feb. ncar time bug\n",
+    "    da = fix_time(da_v)\n",
+    "    # convert xr.ds to xr.da\n",
+    "    da = da[var]\n",
+    "    # weight gridcell dim by global land area\n",
+    "    da_global = weight_landarea_gridcells(da, landarea)\n",
+    "    # weight time dim by days in month\n",
+    "    da_global_ann = yearly_weighted_average(da_global)\n",
+    "    # take global avg for variable over year dimension\n",
+    "    var_avg = da_global_ann.mean(dim='year')\n",
+    "\n",
+    "\n",
+    "    # Plotting\n",
+    "    plt.scatter(x=param_avg, y=var_avg, color = '#62c900ff', alpha = 0.8)\n",
+    "    # Set plot labels and title\n",
+    "    plt.xlabel(param)\n",
+    "    plt.ylabel(var)\n",
+    "    plt.title('2005-2010 Global Average')\n",
+    "    # Show the plot\n",
+    "    plt.show()"
+   ]
   }
  ],
  "metadata": {
